rbx_binary/src/tests/snapshots/rbx_binary__tests__util__cframe-case-mixture__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: "0, 0, 0, 1, 0, 0, 0, 0, -1, 0, 1, 0"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 0.0
            - -1.0
          - - 0.0
            - 1.0
            - 0.0
  children: []
- referent: referent-1
  name: "0.15625, -0.15625, 0.1, -0.1, 0, 0, 1337, -1337, inf, -inf, nan, nan"
  class: CFrameValue
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    SourceAssetId:
      Type: Int64
      Value: -1
    Tags:
      Type: BinaryString
      Value: ""
    Value:
      Type: CFrame
      Value:
        Position:
          - 0.15625
          - -0.15625
          - 0.10000000149011612
        Orientation:
          - - -0.10000000149011612
            - 0.0
            - 0.0
          - - 1337.0
            - -1337.0
            - .inf
          - - -.inf
            - .nan
            - .nan
  children: []
